<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotificationTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="message">NotificationTest message</string>
    <string name="remove">Remove</string>
    <string name="start">Start</string>
    <string name="heads_up">Android Lollipop Heads Up notifications</string>
    <string name="sound">Sound</string>
    <string name="power_off">Power off screen and receive notification</string>
    <string name="help_message">Insert here the notification message</string>
    <string name="help_title">Insert here the notification title</string>
    <string name="led">LED</string>
    <string name="vibrate">Vibrate</string>
    <string name="set_ms">Set seconds after receive notification</string>
    <string name="explanation">Permission need for lock screen</string>
    <string name="warn_heads">Heads up notification works only with audio or vibration enabled</string>

</resources>
