<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                tools:ignore="ObsoleteLayoutParam,ScrollViewCount,SpUsage">

    <EditText
        android:text="@string/app_name"
        android:hint="@string/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:text="@string/message"
        android:hint="@string/help_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title"/>

    <Button
        android:textSize="18dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:onClick="start"
        android:id="@+id/start"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Button
        android:textColor="@android:color/holo_green_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:onClick="remove"
        android:id="@+id/remove"
        android:layout_alignTop="@+id/start"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heads_up"
        android:id="@+id/heads_up"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/message"
        android:layout_alignEnd="@+id/message"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:checked="true"
        android:id="@+id/sound"
        android:layout_below="@+id/heads_up"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_off"
        android:id="@+id/power_off"
        android:layout_below="@+id/sound"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led"
        android:id="@+id/led"
        android:checked="false"
        android:layout_alignTop="@+id/vibrate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate"
        android:id="@+id/vibrate"
        android:checked="true"
        android:layout_above="@+id/power_off"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
